<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline"></string>
    <string name="foo_label">\@Foo</string>
    <string name="tv_name_label">Foo Bar</string>
    <string name="created_at_label">5m</string>
    <string name="tweet_body_label">This is tweet body</string>
    <string name="compose_title">Compose</string>
    <string name="title_activity_compose">Compose Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="chars_140">140</string>
    <string name="tweet">Tweet</string>
    <string name="compose_name_label">Foo Bar</string>
    <string name="compose_screen_name_label">\@foo</string>
    <string name="status_placeholder">What\'s happening?</string>
    <string name="timeline">Timeline</string>
    <string name="mentions">Mentions</string>
    <string name="profile_title">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tweets_label">TWEETS</string>
    <string name="following_label">FOLLOWING</string>
    <string name="followers_label">FOLLOWERS</string>
    <string name="hello">Hello.</string>
    <string name="welcome_to_twitter">Welcome to Twitter.</string>

</resources>