<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/tv_name_label"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tvUserName"
        android:text="@string/foo_label"
        android:textColor="#888888"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/tweet_body_label" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:text="@string/created_at_label"
        android:textColor="#888888"
        android:textSize="11sp" />

</RelativeLayout>
