<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <View
        android:id="@+id/vImageBackground"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#888888" />
    
    
    <View
        android:id="@+id/vSpacer"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/vImageBackground"
        android:layout_marginTop="45dp"
        android:background="#dddddd" />
    

    <ImageView
        android:id="@+id/ivProfileBackground"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignBottom="@+id/vImageBackground"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <View
        android:id="@+id/vImageSheen"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#33000000" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners"
        android:padding="3dp" >

        <com.codepath.apps.basictwitter.RoundedImageView
            android:id="@+id/ivPageProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPageProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPageProfileScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPageProfileName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/llStats"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/vImageBackground"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
         >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#444444"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTweetsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tweets_label"
                android:textColor="#aaaaaa"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#444444"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFollowingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_label"
                android:textColor="#aaaaaa"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#444444"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers_label"
                android:textColor="#aaaaaa"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/fragmentUserTimeline"
        android:name="com.codepath.apps.basictwitter.fragments.UserTimelineFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/vSpacer" />

</RelativeLayout>